--- a/login.css
+++ b/login.css
@@ -1,34 +1,34 @@
 *{
     margin: 0;
+
     font-family: "Lato", sans-serif;
     font-weight: 400;
     font-style: normal;
 }
 
 body{
+    height: 100vh;
     background-color: #5B3731;
 }
 
 #container{
+    height: 100%;
     display: flex;
     flex-direction: column;
-    width: 100%;
-    justify-content: center;
     align-items: center;
-    text-align: center;
-    margin: 0 auto;
-    height: 500px;
-    width: 500px;
-    background-color: #fff;
-    border-radius: 60px;
+    justify-content: center;
 }
 
 #box{
     display: flex;
-    flex-direction:column;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
-    text-align: center;
+    justify-content: center;
+    height: auto;
+    width: auto;
+    background-color: #fff;
+    padding: 60px;
+    border-radius: 25px;
 }
 
 #box img{
@@ -49,12 +49,46 @@ body{
     margin: 20px;
 }
 
-#box p{
-    padding: 7px;
+#formLog p{
+    font-size: 14px;
+    margin-bottom: 3px;
+    left: 0;
+    margin-top: 10px;
+}
+#formLog{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: left;
+}
+#formLog input{
+    text-decoration: none;
+    outline: none;
+    height: 30px;
+    width: 300px;
+    padding: 0 10px;
+    background-color: #ebe7e7;
+    border: none;
+    border-radius: 3px;
+    font-size: 12px;
 }
 
-#box inpuT{
-    height: 20px;
-    outline: none;
-    
+#formLog button{
+    height: 30px;
+    width: 320px;
+    margin-top: 20px;
+    border: none;
+    border-radius: 3px;
+    background-color: #5B3731;
+    color: #fff;
+}
+
+#esq a{
+    text-decoration: none;
+    font-weight: 700;
+}
+
+#esq p {
+    font-size: 13px;
+    margin: 10px 0;
 }
