--- a/dashboards.css
+++ b/dashboards.css
@@ -16,7 +16,6 @@
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-    margin-bottom: 150px;
  }
  
  
@@ -29,6 +28,7 @@
     width: 100%;
     height: 100px;
     padding: 0 30px;
+    position: absolute;
  }
  
  
@@ -51,88 +51,92 @@
  }
  
  .container {
-    background-color: #ffffff;
-    padding: 20px 30px;
-    box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
-    border-radius: 8px;
-    width: 80%;
-    max-width: 750px;
-    margin-top: 30px;
- 
-    header {
-       text-align: center;
-       margin-bottom: 30px;
-    }
- 
-    header h1 {
-       margin: 0;
-       font-size: 2em;
-       color: #333;
-       font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-    }
- 
-    header p {
-       margin: 5px 0 0;
-       font-size: 1em;
-       color: #666;
-       font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-    }
- 
-    section {
-       margin-bottom: 30px;
-    }
- 
-    section h2 {
-       font-size: 1.5em;
-       color: #333;
-       margin-bottom: 15px;
-       border-bottom: 2px solid #5b3731;
-       padding-bottom: 5px;
-       text-align: center; /* Centraliza o título */
-    }
- 
-    table {
-       width: 100%;
-       border-collapse: collapse;
-       margin-bottom: 20px;
-       background-color: #ffffff;
-       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-       border-radius: 8px;
-       overflow: hidden;
-       font-family: "Arial", sans-serif;
-    }
- 
-    table th,
-    table td {
-       padding: 10px;
-       text-align: left;
-       border-bottom: 1px solid #ddd;
-    }
- 
-    table th {
-       background-color: #f4f4f4;
-       color: #333;
-       font-weight: bold;
-       text-align: center;
-    }
- 
-    table tbody tr:nth-child(even) {
-       background-color: #f9f9f9;
-    }
- 
-    table tbody tr:hover {
-       background-color: #f1f1f1;
-    }
- 
-    table tbody tr td {
-       border-right: 1px solid #ddd;
-       text-align: center;
-    }
- 
-    table tbody tr td:last-child {
-       border-right: none;
-    }
- }
+   display: flex;
+   flex-direction: column;
+   text-align: center;
+   justify-content: center;
+   background-color: #ffffff;
+   padding: 20px 30px;
+   box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+   border-radius: 8px;
+   width: 80%;
+   max-width: 750px;
+   margin-top: 125px;
+
+   header {
+      text-align: center;
+      margin-bottom: 30px;
+   }
+
+   header h1 {
+      margin: 0;
+      font-size: 2em;
+      color: #333;
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+   }
+
+   header p {
+      margin: 5px 0 0;
+      font-size: 1em;
+      color: #666;
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+   }
+
+   section {
+      margin-bottom: 30px;
+   }
+
+   section h2 {
+      font-size: 1.5em;
+      color: #333;
+      margin-bottom: 15px;
+      border-bottom: 2px solid #5b3731;
+      padding-bottom: 5px;
+      text-align: center; /* Centraliza o título */
+   }
+
+   table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-bottom: 20px;
+      background-color: #ffffff;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      border-radius: 8px;
+      overflow: hidden;
+      font-family: "Arial", sans-serif;
+   }
+
+   table th,
+   table td {
+      padding: 10px;
+      text-align: left;
+      border-bottom: 1px solid #ddd;
+   }
+
+   table th {
+      background-color: #f4f4f4;
+      color: #333;
+      font-weight: bold;
+      text-align: center;
+   }
+
+   table tbody tr:nth-child(even) {
+      background-color: #f9f9f9;
+   }
+
+   table tbody tr:hover {
+      background-color: #f1f1f1;
+   }
+
+   table tbody tr td {
+      border-right: 1px solid #ddd;
+      text-align: center;
+   }
+
+   table tbody tr td:last-child {
+      border-right: none;
+   }
+}
     
  #rodape{
     display: flex;
