--- a/dashboards.css
+++ b/dashboards.css
@@ -10,12 +10,13 @@
  }
  
  body {
-    height: 100vh;
+    height: 100%;
     background-color: #5b3731;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
+    padding-bottom: 75px;
  }
  
  
